--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "seamless-scroll-polyfill": "^2.1.8",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3"
   },
